@@ -1,3 +1,12 @@
+Fri Aug 29 14:51:20 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/fieldactions.py: Handle repeated adding of sort or facet
+	  field actions with range parameters correctly.  Previously, a new
+	  prefix was chosen each time, breaking accelerated searches for
+	  that field.
+	* xappy/unittests/range_accel.py: Test repeated sort and facet
+	  field actions.
+
 Fri Aug 29 11:22:38 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/dump_field_actions.py: Output the slot and prefix
